# RoverHUD

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
examples/: basic_stream.yaml
src/: main.py
src/app/: __init__.py  app.py  graphics.py
src/app/widgets/: __init__.py  stream_widget.py  waypoint_widget.py  widget.py
src/assets/: logo3d.mtl  waypoint.blend  waypoint.mtl
