[tool.poetry]
name = "roverhud"
version = "0.1.0"
description = "HUD for incoming rover video steams"
authors = ["Areeb Mohammed <am0247@uah.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycairo = "^1.23.0"
PyGObject = "^3.42.2"
pyglet = "^2.0.1"
click = "^8.1.3"
numpy = "^1.23.5"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"
flake8 = "^6.0.0"
black = "^22.10.0"
pre-commit = "^2.20.0"
pydocstyle = "^6.1.1"
bandit = "^1.7.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
